--- a/index.html
+++ b/index.html
@@ -144,6 +144,36 @@
             <button class="button">Узнать больше</button>
         </div>
     </section>
+    <!-- мэсонрай раскладка === -->
+    <section class="masonry-grid">
+        <h2 class="masonry-grid__title">Наши преимущества</h2>
+        <div class="masonry-grid__container">
+            <article class="masonry-item masonry-item--short">
+                <h3 class="masonry-item_title">Качество</h3>
+                <p class="masonry-item_text">Используем только проверенные материалы.</p>
+            </article>
+            <article class="masonry-item masonry-item--tall">
+                <h3 class="masonry-item_title">Гарантия</h3>
+                <p class="masonry-item_text">Предоставляем гарантию на всю продукцию сроком до 5 лет. Наши изделия проходят строгий контроль качества на каждом этапе производства.</p>
+            </article>
+            <article class="masonry-item">
+                <h3 class="masonry-item_title">Доставка</h3>
+                <p class="masonry-item_text">Быстрая доставка по всему городу в течение 24 часов.</p>
+            </article>
+            <article class="masonry-item masonry-item--very-tall">
+                <h3 class="masonry-item_title">Экологичность</h3>
+                <p class="masonry-item_text">Все наши материалы сертифицированы и безопасны для здоровья. Используем переработанную древесину и экологичные краски. Соблюдаем все нормы и стандарты экологической безопасности.</p>
+            </article>
+            <article class="masonry-item masonry-item--short">
+                <h3 class="masonry-item_title">Дизайн</h3>
+                <p class="masonry-item_text">Современный и стильный дизайн.</p>
+            </article>
+            <article class="masonry-item">
+                <h3 class="masonry-item_title">Цены</h3>
+                <p class="masonry-item_text">Доступные цены при высоком качестве.</p>
+            </article>
+        </div>
+    </section>
 </main>
 
 <footer class="footer" id="contact">
